2006-12-01  Richard Guenther  <rguenther@suse.de>

PR c++/29433
	* dwarf2out.c (struct pubname_struct): Make name const.
	(add_pubtype): Do not xstrdup identifiers.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@119404 138bc75d-0d04-0410-961f-82ee72b054a4